--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <!-- <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> -->
   <title>Vite App</title>
 </head>
 
 <body>
   <div id="app"></div>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
   <script type="module" src="/src/main.ts"></script>
 </body>
 
